--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -16,12 +16,12 @@ h2{
     color: #DA0037;
     font-weight: bold;
     letter-spacing: 2px;
-    margin: 0;
+    margin-bottom: 20px;
 }
 
 h3{
     color: white;
-    font-size: 15px;
+    font-size: 1.5rem;
     font-weight: normal;
     letter-spacing: 2px;
     margin: 0;
@@ -31,7 +31,7 @@ h3{
 p {
     color: white;
     letter-spacing: 2px;
-    
+    font-size: 1.5rem;
 }
 
 .heading {
@@ -47,10 +47,6 @@ body{
 
 .button{
     margin-top: 50px;
-}
-
-table {
-    margin-top: 150px;
 }
 
 .fa {
@@ -100,8 +96,25 @@ table {
     color: black;
 }
 
-table{
+.intro {
+    display:block;
+    position:absolute;
+    width: 30%;
     text-align: start;
-    margin-left:5%;
-    margin-right: 10%;
+    margin-top: 100px;
+    margin-left: 5%;
+}
+
+.image {
+    position: absolute;
+    left: 550px;
+    margin-top: 100px;
+}
+
+.personal-info {
+    display:block;
+    position: absolute;
+    width: 400px;
+    left: 1000px;
+    margin-top: 100px;
 }
